fix(ci): enforce Java 11 API compatibility