@@ -3021,7 +3021,7 @@ public final class GameFrame extends javax.swing.JFrame implements ZoomableInter
 
         if (notifier != null) {
 
-            notifier.add(Thread.currentThread().threadId());
+            notifier.add(Thread.currentThread().getId());
 
             synchronized (notifier) {
 
